--- a/clap-cmd/Cargo.toml
+++ b/clap-cmd/Cargo.toml
@@ -11,11 +11,13 @@ ansi_term = "0.12.1"
 clap = { version = "4.4.18", features = ["cargo"] }
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.11"
+data-encoding = "2.5.0"
 error-chain = { version = "0.12.4", features = ["backtrace"] }
 flate2 = "1.0.28"
 image = "0.24.8"
 num = "0.4.1"
 num_cpus = "1.16.0"
+ring = "0.17.7"
 rusqlite = "0.30.0"
 tar = "0.4.40"
 threadpool = "1.8.1"
