--- a/clap-cmd/Cargo.toml
+++ b/clap-cmd/Cargo.toml
@@ -14,9 +14,11 @@ clap = { version = "4.4.18", features = ["cargo"] }
 crossbeam = "0.8.4"
 crossbeam-channel = "0.5.11"
 data-encoding = "2.5.0"
+env_logger = "0.11.1"
 error-chain = { version = "0.12.4", features = ["backtrace"] }
 flate2 = "1.0.28"
 image = "0.24.8"
+log = "0.4.20"
 num = "0.4.1"
 num_cpus = "1.16.0"
 ring = "0.17.7"
