--- a/encoding/Cargo.toml
+++ b/encoding/Cargo.toml
@@ -2,11 +2,15 @@
 name = "encoding"
 version = "0.1.0"
 edition = "2021"
+default-run = "encoding"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 base64 = "0.21.7"
+byteorder = "1.5.0"
 data-encoding = "2.5.0"
 percent-encoding = "2.3.1"
+serde_json = "1.0.113"
+toml = "0.8.9"
 url = "2.5.0"
